# ssbgrid

./: .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
src/ssbgrid/: __init__.py  __main__.py  conversion.py  standard_grid.py  standard_grids.py
src/tests/: test_conversion.py
ssbgrid/: __main__.py  standard_grid.py
